Fix mobile phone link blue on ios

--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -39,6 +39,10 @@ img {
 .slick-slide {
     line-height: 0;
 }
+a[href^="tel"]{
+    color:inherit;
+    text-decoration:none;
+}
 
 /*
  * Loading animation
