--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ img {
 .slick-slide {
   line-height: 0; }
 
+a[href^="tel"] {
+  color: inherit;
+  text-decoration: none; }
+
 /*
  * Loading animation
  */
